--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/server.js",
   "scripts": {
-    "test": "tsc"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
