--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./src/server.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev" : "tsnd src/server.ts"
   },
   "keywords": [],
   "author": "",
