--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,14 @@
   "main": "./src/server.js",
   "scripts": {
     "build": "tsc",
-    "dev" : "tsnd src/server.ts"
+    "dev": "tsnd src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.8.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
