--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.13",
+    "axios": "^1.2.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
