--- a/web/package.json
+++ b/web/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/validator": "^13.7.11",
     "axios": "^1.2.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.6.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
