--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.13",
+    "@types/jsonwebtoken": "^9.0.1",
     "axios": "^1.2.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "node-fetch": "^3.3.0"
   },
