--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.19",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-modal": "^3.13.1",
